# Gpu-Compute-Runtime

./: .gitignore  Makefile  README.md  clean.bat  cmd.md  run.bat  run_unroll.bat  test.bat
.github/workflows/: deploy-dashboard.yml
compiler/: compiler_pipeline.cpp  compiler_pipeline.h
compiler/ast/: ast.h  constant_propagation.cpp  constant_propagation.h  emitter.cpp  emitter.h  glsl_lexer.cpp  glsl_lexer.h  glsl_parser.cpp  glsl_parser.h
compiler/bridge/: shaderc_bridge.cpp
compiler/preprocessor/: preprocessor.cpp  preprocessor.h
docs/: gitcommands.md  mandelbrot.md  resources.md
docs/Benchmarks/: ParallelPrefixSum.md  histogram.md  spmv.md
kernels/: double.comp  unroll_test.comp
kernels/benchmarks/: histogram.comp  histogram.glsl  scan_pass1.comp  scan_pass1_warp.glsl  scan_pass2.comp  scan_pass2.glsl  scan_pass3.comp  (+3 more)
runtime/: Cargo.toml  bench_results.json  build.rs
runtime/cpp/: loop_unroller.cpp  loop_unroller.h  shaderc_bridge.cpp
runtime/shaders/: double.comp
runtime/shaders/std/: math.comp  random.comp
runtime/src/: buffer.rs  cli.rs  compiler.rs  context.rs  dispatcher.rs  error.rs  lib.rs  main.rs  pipeline.rs
runtime/src/bench/: histogram.rs  mod.rs  scan.rs  spmv.rs
runtime/src/demos/: mandelbrot.rs
runtime/src/gpu/: buffer.rs  dispatcher.rs  mod.rs  pipeline.rs  profiler.rs
runtime/src/shaderc/: mod.rs
runtime/tests/: benchmark_test.rs  compute_test.rs  dispatcher_test.rs  error_test.rs  mandelbrot_test.rs  profiler_test.rs  shaderc_test.rs
runtime/tests/shaders/: busy_work.glsl  busy_work_loop.glsl  passthrough.glsl
(+11 files in other folders)
