[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = {version = "0.38", features = ["debug"]}
gpu-allocator = "0.28.0"
clap = {version = "4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[build-dependencies]
cc = "1.2"

[[bin]]
name = "gcr"
path = "src/main.rs"